--- a/templates/initiate_pay.html
+++ b/templates/initiate_pay.html
@@ -10,29 +10,41 @@
 <style>
     div{
         background-color: palevioletred;
-        height: 350px;
-        width: 700px; 
-        padding: 10px;
+        height: 400px;
+        width: 50%; 
+        padding: 20px;
+        margin-top: 2.5rem;
+        margin-left: 22rem;
     }     
     input{
         width: 100%;
+        height: 40px;
     }
     
     button{
         background-color: black;
         color: white;
-    
-
+        margin-left: 15rem;
     }
-</style>
+
+    @media only screen and (max-width: 600px)  {
+        div{
+            width: 70%; 
+            margin-left: 15%;       
+        }
+        button{
+            margin-left: 15%;
+        }
+    }
+ </style>
 <body>
     <h2 class="text-center mt-5"> PASTACK PAYMENT WITH PYTHON DJANGO</h2>
-            <div class="offset-3">
+            <div class="">
                 <form action="" method="post">
                     <h3 class="text-center">Enter Amount</h3>
                     {{form.as_p}}
             
-                        <button type="submit" class="offset-4 btn-lg">Make Payment</button>
+                        <button type="submit" class="btn-lg">Make Payment</button>
                     
                     {% csrf_token %}
                 </form>   
